@@ -1,5 +1,10 @@
 2009-09-21  Doug Evans  <dje@sebabeach.org>
 
+	* read.scm (/CGEN-RTL-VERSION): Initialize to #f.
+	(init-reader!): Set /CGEN-RTL-VERSION to default.
+
+	* read.scm (cpu-load): Print load parameters.
+
 	* dev.scm (load-doc): Set verbose-level to 2.
 
 2009-09-20  Doug Evans  <dje@sebabeach.org>
